tests/test_files_pa3/errors/badLogicalOp.ic
class A
{
	
	static void main(string[] args) { }

	boolean ints(int x, int y)
	{
		boolean b;
		int z;
		string s;
		z = 4;
		s = "s";
		s = x<=y;		
		return b;
	}
}
	